vivado/214_benchmakrs/proj_extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:1:
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:121:7: warning: overflow converting case value to switch condition type (138 to 0) [-Wswitch]
 case 138:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:109:7: warning: overflow converting case value to switch condition type (134 to 0) [-Wswitch]
 case 134:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:106:7: warning: overflow converting case value to switch condition type (136 to 0) [-Wswitch]
 case 136:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:103:7: warning: overflow converting case value to switch condition type (135 to 1) [-Wswitch]
 case 135:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:100:7: warning: overflow converting case value to switch condition type (132 to 0) [-Wswitch]
 case 132:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:97:7: warning: overflow converting case value to switch condition type (137 to 1) [-Wswitch]
 case 137:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:93:7: warning: overflow converting case value to switch condition type (133 to 1) [-Wswitch]
 case 133:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:106:7: error: duplicate case value '0'
 case 136:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:100:7: note: previous case defined here
 case 132:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:109:7: error: duplicate case value '0'
 case 134:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:106:7: note: previous case defined here
 case 136:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:121:7: error: duplicate case value '0'
 case 138:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:109:7: note: previous case defined here
 case 134:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:97:7: error: duplicate case value '1'
 case 137:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:93:7: note: previous case defined here
 case 133:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:103:7: error: duplicate case value '1'
 case 135:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:97:7: note: previous case defined here
 case 137:
      ^
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:142:17: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.a_clk_reg = RADEON_GPIOPAD_A;
                ^ ~~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:143:18: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.a_data_reg = RADEON_GPIOPAD_A;
                 ^ ~~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:144:18: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.en_clk_reg = RADEON_GPIOPAD_EN;
                 ^ ~~~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:145:19: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.en_data_reg = RADEON_GPIOPAD_EN;
                  ^ ~~~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:146:17: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.y_clk_reg = RADEON_GPIOPAD_Y;
                ^ ~~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:147:18: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.y_data_reg = RADEON_GPIOPAD_Y;
                 ^ ~~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:151:17: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.a_clk_reg = RADEON_MDGPIO_A;
                ^ ~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:152:18: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.a_data_reg = RADEON_MDGPIO_A;
                 ^ ~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:153:18: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.en_clk_reg = RADEON_MDGPIO_EN;
                 ^ ~~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:154:19: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.en_data_reg = RADEON_MDGPIO_EN;
                  ^ ~~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:155:17: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.y_clk_reg = RADEON_MDGPIO_Y;
                ^ ~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:156:18: warning: incompatible pointer to integer conversion assigning to 'int' from 'void *' [-Wint-conversion]
  i2c.y_data_reg = RADEON_MDGPIO_Y;
                 ^ ~~~~~~~~~~~~~~~
extr_.linuxdriversgpudrmradeonradeon_combios.c_combios_setup_i2c_bus_with_main.c:170:21: warning: incompatible pointer to integer conversion assigning to 'int' from 'u32' (aka 'void *') [-Wint-conversion]
  i2c.mask_clk_mask = clk_mask;
                    ^ ~~~~~~~~
20 warnings and 5 errors generated.
